--- a/src/root.css
+++ b/src/root.css
@@ -28,6 +28,12 @@
    ========================================
 
 */
+
+@font-face {
+	font-family: 'Bricolage Grotesque1';
+	src: url('media/fonts/BricolageGrotesque-VariableFont_opsz,wdth,wght.ttf');
+}
+
 :root {
 	/* Color Palette - Navy Blue, White, Black */
 	--color-primary: #222B68; /* Deep Navy Blue - Main brand color */
@@ -64,6 +70,7 @@
 
 	/* Typography */
 	--font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+	/*--font-family-base: "Bricolage Grotesque1", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;*/
 	--font-family-heading: var(--font-family-base);
 
 	--font-size-xs: 0.75rem; /* 12px */
@@ -145,7 +152,7 @@
 }
 
 html {
-	scroll-behavior: smooth;
+	scroll-behavior: initial !important;
 	-webkit-text-size-adjust: 100%;
 }
 
